# litestar-cqrs-example

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.postgres  README.md  alembic.ini  docker-compose.yml  pyproject.toml  renew-certs.sh
.github/workflows/: test.yaml
metrics/grafana/provisioning/: loki.yml  prometheus.yml
metrics/vector/: vector.toml
migrations/: env.py
migrations/versions/: 00001_732b95cb714f_create_tables.py
nginx/: nginx.conf
nginx/conf.d/: default.conf
nginx/sites-enabled/: example.com.conf  redirect.conf
sql/: init.sql  pg_hba.conf
src/: __main__.py
src/api/: __init__.py
src/api/common/: dto.py  tools.py
src/api/common/bus/: builder.py  core.py
src/api/common/interfaces/: event.py  handler.py  middleware.py  proxy.py
src/api/common/middlewares/: __init__.py  x_request_id.py
src/api/server/: __init__.py  granian.py  gunicorn.py  uvicorn.py
src/api/v1/: __init__.py  dependencies.py
src/api/v1/commands/: __init__.py
src/api/v1/endpoints/: healthcheck.py
src/api/v1/queries/: __init__.py
src/backend/: __main__.py
src/backend/app/bus/: __init__.py  builder.py  core.py
src/backend/app/common/: tools.py
src/backend/app/contracts/: auth.py  cache.py  connection.py  dto.py  exceptions.py  gateway.py  manager.py  pagination.py  query.py  repositories.py  result.py  (+1 more)
src/backend/http/: __init__.py  dependencies.py  healthcheck.py
src/backend/shared/: types.py
src/config/: core.py
src/core/: config.py
src/core/server/: __init__.py  granian.py  gunicorn.py  uvicorn.py
src/database/: manager.py
src/database/alchemy/: dao.py  tools.py  types.py
src/database/interfaces/: query.py
src/services/: gateway.py  mixins.py  tools.py
src/services/cache/: redis.py
src/services/internal/: base.py  gateway.py  interfaces.py  user.py
tests/integration/: conftest.py  utils.py
tests/integration/auth/: test_login.py  test_logout.py  test_refresh.py
tests/integration/rbac/: test_permission_fields.py  test_permissions.py  test_roles.py
tests/integration/user/: test_create.py  test_delete.py  test_get.py  test_update.py  test_user_access.py  test_user_create.py  test_user_delete.py  test_user_detail.py  test_user_list.py  test_user_list_any.py  test_user_me.py  test_user_update.py
(+115 files in other folders)
